--- a/appManager/WebContent/css/cover.css
+++ b/appManager/WebContent/css/cover.css
@@ -175,7 +175,7 @@ logo {
  height: 15%;
   float:left;
   width: 15%;
-  background: url('../images/logo.png') center center no-repeat, #008080;
+  background: url('./../images/logo.png') center center no-repeat, #008080;
   border-radius: 50%;
   box-shadow: 1px 1px 2px rgba(0,0,0,.3);
 }
