--- a/appManager/WebContent/css/cover.css
+++ b/appManager/WebContent/css/cover.css
@@ -1,6 +1,3 @@
-/*
- * Globals
- */
 
 /* Links */
 a,
@@ -27,169 +24,86 @@ a:hover {
 html,
 body {
   height: 100%;
-/* background-color:#d1adca;
-background-image:  url("../images/bg2.jpg");*/
+/* background-color:#d1adca;*/
+  background-image:  url("../images/font5.jpg");
  
 }
 body {
-  color: #fff;
+  color: #8080c0;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+ /* background-color:#d1adca;*/
+ 
+  
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+#loginbox {
+    margin-top: 8px;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
+#loginbox > div:first-child {        
+    padding-bottom: 10px;    
 }
 
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.iconmelon {
+    display: block;
+    margin: auto;
 }
 
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
+#form > div {
+    margin-bottom: 25px;
 }
 
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
+#form > div:last-child {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+.panel {    
+    background-color: transparent;
 }
 
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+.panel-body {
+    padding-top: 30px;
+    background-color: rgba(2555,255,255,.3);
+  /* background-color: rgba(25,355,255,.3);*/
 }
 
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
+#particles {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    top: 0;                        
     bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
+    left: 0;
+    right: 0;
+    position: absolute;
+    z-index: -2;
 }
 
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
-}
-/*-----------------------FORMULAIRE----------------------------*/
-
-
-logo {
-  display: block;
-  margin-top:7.5%;
+.iconmelon,
+.im {
   position: relative;
-  right: -7%;
- /* height: 95px;*/
- height: 15%;
-  float:left;
-  width: 15%;
-  background: url('./../images/logo.png') center center no-repeat, #008080;
-  border-radius: 50%;
-  box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+  width: 150px;
+  height: 150px;
+  display: block;
+  fill: #525151;
 }
 
-fieldset{
-	border-radius: 5px; 
-	padding:8%;
-	background-color:#c0c0c0;
-	width:75%;
-margin-right: auto;
-  margin-left: auto;
+.iconmelon:after,
+.im:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-a, a:hover{
-	color:red;
+img{
+	width:35%;
+	border-radius:50%;
+	box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+	top: 8px;
+	 position: relative;
+	 float:top;
 }
-
-
